--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':sample', ':library', ':library-retrofit-adapter', ':tests', ':library-retrofit-legacy-adapter'
+//include ':sample', ':library', ':library-retrofit-adapter', ':tests', ':library-retrofit-legacy-adapter'
+include ':library', ':library-retrofit-adapter', ':tests'
